fix: text alignmet

--- a/src/pages/CoursesLanding/components/FeaturedCourses/FeaturedCourses.scss
+++ b/src/pages/CoursesLanding/components/FeaturedCourses/FeaturedCourses.scss
@@ -4,14 +4,11 @@
 }
 .FeaturedCourses {
 	@include flex-c;
-
 	padding-top: 88px;
 	padding-bottom: 88px;
-
 	text-align: start;
 	gap: 80px;
 	#{&}_title {
-		text-align: center;
 		gap: 24px;
 		@include flex-c;
 	}
@@ -22,7 +19,6 @@
 			padding-bottom: 40px;
 		}
 	}
-
 }
 
 @media (min-width: 570px) {
@@ -43,26 +39,29 @@
 
 @media (max-width: 570px) {
 	.FeaturedCourses {
+		#{&}_title {
+			text-align: center;
+		}
 		#{&}_swiper {
 			.swiper_container {
 				margin-top: 0;
 				padding-top: 0;
 				padding-bottom: 0;
-                margin: 0 -10px;
+				margin: 0 -10px;
 			}
 		}
 
 		.slider-controler {
-            z-index: 100;
-            .slider-arrow::after {
-                display: none;
+			z-index: 100;
+			.slider-arrow::after {
+				display: none;
 			}
-            .swiper-button-next{
-                right: var(--swiper-navigation-sides-offset,-6px);
-            }
-            .swiper-button-prev{
-                left: var(--swiper-navigation-sides-offset,-6px);
-            }
+			.swiper-button-next {
+				right: var(--swiper-navigation-sides-offset, -6px);
+			}
+			.swiper-button-prev {
+				left: var(--swiper-navigation-sides-offset, -6px);
+			}
 		}
 	}
 }
